--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="backgroundImg">
-        <img src="https://png.pngtree.com/background/20211217/original/pngtree-fluid-gradient-dark-blue-background-picture-image_1593596.jpg" alt="">
+        <img src="./Images/neom-ckfXPMb2_BI-unsplash.jpg" alt="">
     </div>
     <header>
         <img src="Images/Ray.png" alt="profile_ray">
