--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="backgroundImg">
-        <img src="./Images/neom-ckfXPMb2_BI-unsplash.jpg" alt="">
+        <img src="./Images/darkknight.jpg" alt="">
     </div>
     <header>
         <img src="Images/Ray.png" alt="profile_ray">
@@ -21,10 +21,40 @@
     </header>
 
     <main>
-        <a>
+        <a class="link">
             <div class="linkBackground"></div>
             <p>Instagram</p>
             <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a class="link">
+            <div class="linkBackground"></div>
+            <p>Twitter</p>
+            <i class="fa-brands fa-x-twitter"></i>
+        </a>
+        <a class="link">
+            <div class="linkBackground"></div>
+            <p>Facebook</p>
+            <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a class="link">
+            <div class="linkBackground"></div>
+            <p>Linkedin</p>
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a class="link">
+            <div class="linkBackground"></div>
+            <p>GitHub</p>
+            <i class="fa-brands fa-square-github"></i>
+        </a>
+        <a class="link">
+            <div class="linkBackground"></div>
+            <p>Portfolio</p>
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a class="link">
+            <div class="linkBackground"></div>
+            <p>GitLab</p>
+            <i class="fa-brands fa-gitlab"></i>
         </a>
     </main>
 
