--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/main.css" type="text/css">
+    <!----- google font links ----->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!------ font awesome links ------>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!------ Fav icon links ----->
+    <link rel="icon" type="image/png" href=https://i.postimg.cc/xjwDWjgB/woldreamz-inc-favicon-black.png>
     <title>Linktree.Rainer</title>
 </head>
 <body>
@@ -21,37 +25,37 @@
     </header>
 
     <main>
-        <a class="link">
+        <a href="instagram.com/woldreamz/" target="_blank" class="link">
             <div class="linkBackground"></div>
             <p>Instagram</p>
             <i class="fa-brands fa-instagram"></i>
         </a>
-        <a class="link">
+        <a href="https://twitter.com/Woldreamz" target="_blank" class="link">
             <div class="linkBackground"></div>
             <p>Twitter</p>
             <i class="fa-brands fa-x-twitter"></i>
         </a>
-        <a class="link">
+        <a href="https://web.facebook.com/reyonsa/" target="_blank" class="link">
             <div class="linkBackground"></div>
             <p>Facebook</p>
             <i class="fa-brands fa-facebook-f"></i>
         </a>
-        <a class="link">
+        <a href="https://www.linkedin.com/in/woldreamz/" target="_blank" class="link">
             <div class="linkBackground"></div>
             <p>Linkedin</p>
             <i class="fa-brands fa-linkedin"></i>
         </a>
-        <a class="link">
+        <a href="https://github.com/Woldreamz" target="_blank" class="link">
             <div class="linkBackground"></div>
             <p>GitHub</p>
             <i class="fa-brands fa-square-github"></i>
         </a>
-        <a class="link">
+        <a href="https://woldreamz.github.io/Woldreamz-inc/" target="_blank" class="link">
             <div class="linkBackground"></div>
             <p>Portfolio</p>
             <i class="fa-brands fa-instagram"></i>
         </a>
-        <a class="link">
+        <a href="instagram.com/woldreamz/" target="_blank" class="link">
             <div class="linkBackground"></div>
             <p>GitLab</p>
             <i class="fa-brands fa-gitlab"></i>
