--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="https://woldreamz.github.io/Woldreamz-inc/" target="_blank" class="link">
             <div class="linkBackground"></div>
             <p>Portfolio</p>
-            <i class="fa-regular fa-briefcase"></i>
+            <i class="fa-solid fa-user-tie"></i>
         </a>
         <a href="instagram.com/woldreamz/" target="_blank" class="link">
             <div class="linkBackground"></div>
