--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <title>Linktree.Rainer</title>
 </head>
 <body>
+    <!---- background image div ----->
     <div class="backgroundImg">
         <img src="./Images/wolfgang-hasselmann-jhILB4S51ic-unsplash.jpg" alt="">
     </div>
+    <!---- header ----->
     <header>
         <img src="Images/Ray.png" alt="profile_ray">
         <h1>Welcome to <mark>Rainer Nsa's</mark> link site :P</h1>
         <p>See what I'm up to </p>
     </header>
-
+    <!---- main ----->
     <main>
         <a href="instagram.com/woldreamz/" target="_blank" class="link">
             <div class="linkBackground"></div>
@@ -62,7 +64,8 @@
         </a>
     </main>
 
-
+    <!---- footer ----->
+    
     <script src="JS/index.js"></script>
 </body>
 </html>
