--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!---- header ----->
     <header>
         <img src="Images/Ray.png" alt="profile_ray">
-        <h1>Welcome to <mark>Rainer Nsa's</mark> link site :P</h1>
+        <h1>Welcome to <mark>Rainer Nsa's</mark> link site 💻s</h1>
         <p>See what I'm up to </p>
     </header>
     <!---- main ----->
@@ -65,7 +65,7 @@
     </main>
 
     <!---- footer ----->
-    
+
     <script src="JS/index.js"></script>
 </body>
 </html>
