--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!---- header ----->
     <header>
         <img src="Images/Ray.png" alt="profile_ray">
-        <h1>Welcome to <mark>Rainer Nsa's</mark> link site's 📲 💻</h1>
+        <h1>Welcome to <mark>Rainer Nsa's</mark> site links 📲 💻</h1>
         <p>See what I'm up to </p>
     </header>
     <!---- main ----->
