--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <img src="Images/Ray.png" alt="profile_ray">
         <h1>Welcome to <mark>Rainer Nsa's</mark> site links </h1>
-        <p> Come on in!  </p>
+        <p> Come on in! 📲 💻 </p>
     </header>
     <!---- main ----->
     <main>
